Huge cleanup pass